--- a/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu.csproj
+++ b/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu.csproj
@@ -33,8 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +55,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GUI\frmCongTy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\frmCongTy.Designer.cs">
+      <DependentUpon>frmCongTy.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\frmDuAn.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,11 +103,11 @@
     <Compile Include="GUI\frmQuanLy.Designer.cs">
       <DependentUpon>frmQuanLy.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\LoginSQL.cs">
+    <Compile Include="GUI\frmThanNhan.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\LoginSQL.Designer.cs">
-      <DependentUpon>LoginSQL.cs</DependentUpon>
+    <Compile Include="GUI\frmThanNhan.Designer.cs">
+      <DependentUpon>frmThanNhan.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\PasswordChangingForm.cs">
       <SubType>Form</SubType>
@@ -100,6 +115,17 @@
     <Compile Include="GUI\PasswordChangingForm.Designer.cs">
       <DependentUpon>PasswordChangingForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\BAOHIEMXAHOI.cs" />
+    <Compile Include="Models\BAOHIEMYTE.cs" />
+    <Compile Include="Models\CONGTY.cs" />
+    <Compile Include="Models\DUAN.cs" />
+    <Compile Include="Models\NHANVIEN.cs" />
+    <Compile Include="Models\NHANVIEN_CONGTY.cs" />
+    <Compile Include="Models\PHANCONG.cs" />
+    <Compile Include="Models\PHONGBAN.cs" />
+    <Compile Include="Models\QuanLyNhanVien.cs" />
+    <Compile Include="Models\TAIKHOAN.cs" />
+    <Compile Include="Models\THANNHAN.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\Delete.cs" />
@@ -131,8 +157,8 @@
     <EmbeddedResource Include="GUI\frmQuanLy.resx">
       <DependentUpon>frmQuanLy.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\LoginSQL.resx">
-      <DependentUpon>LoginSQL.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\frmThanNhan.resx">
+      <DependentUpon>frmThanNhan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\PasswordChangingForm.resx">
       <DependentUpon>PasswordChangingForm.cs</DependentUpon>
@@ -147,6 +173,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -183,6 +210,30 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\top-6-hinh-anh-nha-xuong-dep-khong-the-bo-qua-2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background4.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\company.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\thannhan.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\anh2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\anh1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background41.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\anh3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hoacuc.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
