--- a/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/App.config
+++ b/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/App.config
@@ -19,5 +19,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="QuanLyNhanVien" connectionString="data source=DESKTOP-6NB2THP;initial catalog=QuanLyNhanVien;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="QuanLyNhanVien1" connectionString="data source=DESKTOP-6NB2THP;initial catalog=QuanLyNhanVien;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
