design formBHYTE, DuAn, MainNV

--- a/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu.csproj
+++ b/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu.csproj
@@ -257,5 +257,8 @@
   <ItemGroup>
     <None Include="Resources\hoacuc1.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Baohiemyte.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
