--- a/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/App.config
+++ b/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="QuanLyNhanVien" connectionString="data source=DESKTOP-6NB2THP;initial catalog=QuanLyNhanVien;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="QuanLyNhanVien" connectionString="data source=DESKTOP-L2250;initial catalog=QuanLyNhanVien;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
