--- a/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu.csproj
+++ b/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu/Thuong-QuanLyNhanSu.csproj
@@ -121,15 +121,6 @@
     <Compile Include="GUI\PasswordChangingForm.Designer.cs">
       <DependentUpon>PasswordChangingForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\BAOHIEMXAHOI.cs" />
-    <Compile Include="Models\BAOHIEMYTE.cs" />
-    <Compile Include="Models\DUAN.cs" />
-    <Compile Include="Models\NHANVIEN.cs" />
-    <Compile Include="Models\PHANCONG.cs" />
-    <Compile Include="Models\PHONGBAN.cs" />
-    <Compile Include="Models\QuanLyNhanVien.cs" />
-    <Compile Include="Models\TAIKHOAN.cs" />
-    <Compile Include="Models\THANNHAN.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\Delete.cs" />
@@ -274,6 +265,8 @@
     <None Include="Resources\1.-bóng-trăng.jpg" />
     <None Include="Resources\hinh-nen-3d-dep-cho-dien-thoai-13.jpg" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
